Overflow fixed

--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -38,7 +38,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   color: variables.$color-light;
-  overflow: hidden;
+  // overflow: hidden;
   padding-inline: 1rem;
 }
 
